--- a/scientific-research.css
+++ b/scientific-research.css
@@ -1433,7 +1433,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	z-index: 3;
 	width: 0;
 	height: 0;
-	border-left: 18px solid #71b280;
+	border-left: 18px solid #22c1c3;
 	border-top: 12px solid transparent;
 	border-bottom: 12px solid transparent;
 }
