--- a/marketing.css
+++ b/marketing.css
@@ -1022,44 +1022,69 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .grid_icon .fi{
-	font-size: 44px;
-	width: 70px;
-	height: 70px;
-	background-color: #ffffff;
-	color: #e53935;
+	font-size: 48px;
+	color: #ffffff;
 	display: inline-block;
 	text-align: center;
-	padding: 9px;
-	border-radius: 50%;
 }
 
 .grid_content{
-	position: absolute;
-	bottom: 25px;
-	left: 20px;
-	max-width: 400px;
+	padding: 25px 20px;
+	text-align: center;
+	background-color: #ffffff;
 }
 
 .grid_content h3{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 18px;
+	font-weight: 600;
+	display: block;
+	color: #111111;
+	text-align: center;
+	letter-spacing: 1px;
+	line-height: 1.4em;
 	margin: 0;
 }
 
-.grid_content h3 a{
+.grid_content p{
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 15px;
+	font-weight: normal;
+	display: block;
+	color: #696969;
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 1.5em;
+	padding-top: 10px;
+}
+
+.grid_button a{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 13px;
 	font-weight: 600;
-	display: block;
-	color: #ffffff;
-	text-align: left;
-	text-transform: uppercase;
-	text-decoration: none;
 	letter-spacing: 1px;
-	line-height: 1.4em;
+	text-align: center;
+	text-transform: uppercase;
+	display: inline-block;
+	color: #e53935;
+	text-decoration: none;
+	max-width: 110px;
+	margin: 0 auto;
 	transition: 0.5s;
+	padding-top: 5px;
 }
 
-.grid_content h3 a:hover{
-	color: #e53935;
+.grid_button a::after{
+	content: "\203A";
+	position: relative;
+	top: 1px;
+	font-size: 20px;
+	display: inline-block;
+	padding-left: 5px;
+}
+
+.grid_button a:hover{
+	color: #111111;
 }
 
 /* --- 3.4. Marketing Area Four --- */
@@ -1145,11 +1170,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	height: auto;
 }
 
-.portfolio_image > a > img{
+.portfolio_image .image_box a > img{
 	transition: ease-in-out 3.25s;
 }
 
-.portfolio_image > a > img:hover{
+.portfolio_image .image_box > a > img:hover{
 	transform: scale(1.15);
 }
 
@@ -2024,6 +2049,7 @@ a.footer-logo img{
 	.portfolio_col{
 		flex: 50%;
 		width: 50%;
+		max-width: 400px;
 	}
 	
 	.blog_col{
@@ -2107,7 +2133,7 @@ a.footer-logo img{
 	
 	.portfolio_col{
 		flex: 100%;
-		width: 100%;
+		min-width: 100%;
 	}
 	
 	.blog_col{
