--- a/construction.css
+++ b/construction.css
@@ -615,7 +615,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .icon_bottom{
-	margin-top: 200px;
+	margin-top: 190px;
 }
 
 .icon_symbol{
@@ -627,7 +627,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background-color: #ffc91a;
 	border-radius: 50%;
 	overflow: hidden;
-	margin-bottom: -55px;
+	margin-bottom: -60px;
 }
 
 .icon_symbol .fi{
@@ -662,7 +662,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: inline-block;
 	color: #ffc91a;
 	text-decoration: none;
-	max-width: 115px;
+	max-width: 125px;
 	margin: auto;
 	transition: 0.5s;
 }
@@ -981,7 +981,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 375px;
 	margin-right: 15px;
 	background: rgba(0,0,0,0.6);
-	padding: 40px 20px 15px;
+	padding: 40px 20px 25px;
 }
 
 .bg_content h3{
@@ -1059,7 +1059,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	margin-bottom: 20px;
+	margin-bottom: 25px;
 }
 
 .info_head{
@@ -1108,7 +1108,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .portfolio_col{
 	flex: 33.33%;
 	width: 33.33%;
-	max-width: 425px;
+	max-width: 400px;
 	margin: 0 auto;
 	position: relative;
 }
@@ -1116,7 +1116,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .portfolio_box{
 	position: relative;
 	display: block;
-	padding: 15px;
+	padding: 10px;
 }
 
 .portfolio_image{
@@ -2025,7 +2025,7 @@ a.footer-logo img{
 	
 	.portfolio_col{
 		flex: 100%;
-		width: 100%;
+		min-width: 100%;
 	}
 	
 	.count_col{
