--- a/law-firm.css
+++ b/law-firm.css
@@ -681,18 +681,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	line-height: 1.4em;
 }
 
-.num_box p{
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 15px;
-	font-weight: normal;
-	display: block;
-	color: #696969;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.5em;
-	padding: 10px 0;
-}
-
 /* --- 3.2. Law Area Two --- */
 .law_area_two{
 	max-width: 1280px;
@@ -1617,8 +1605,8 @@ li.slick-active button{
 .law_area_nine{
 	min-height: 400px;
 	text-align: center;
-	margin-bottom: 0;
-	padding: 6em 25px 12em;
+	margin-bottom: 9em;
+	padding: 8em 25px 8em;
 	background-color: #eeeeee;
 }
 
@@ -1743,48 +1731,56 @@ a.blog_btn:hover{
 .law_area_ten{
 	max-width: 1200px;
 	width: calc(100% - 50px);
-	margin: -90px auto 9em;
+	margin: 0 auto -12em;
 	position: relative;
 	z-index: 999;
-	background-color: #999966;
-	border-radius: 10px;
+	min-height: 325px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.law_area_ten::before {
+	content: '';
+	position: absolute;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(24, 25, 34, 0.6);
 }
 
 .law_group_ten{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	padding: 40px 30px;
+	position: relative;
+	z-index: 999;
+	max-width: 700px;
+	padding: 0 20px;
+	margin: auto;
 }
 
 .title_head{
-	flex: 83.33%;
-	width: 83.33%;
-}
-
-.title_head h3{
-	max-width: 650px;
 	color: #ffffff;
 	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 35px;
+	font-size: 40px;
 	font-weight: 700;
+	color: #ffffff;
 	display: block;
-	text-align: left;
+	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.2em;
 	margin: 0;
 }
 
-.right_btn{
-	flex: 16.66%;
-	width: 16.66%;
-	margin-top: 20px;
-}
-
-.right_btn a{
-	background-color: #ffffff;
+.bg_col_btn a{
+	background-color: #999966;
 	width: 150px;
-    color: #111111;
+	margin: 30px auto 0;
+    color: #ffffff;
     padding: 13px 14px;
     text-decoration: none;
 	text-transform: uppercase;
@@ -1793,14 +1789,14 @@ a.blog_btn:hover{
 	font-weight: 600;
 	font-family: 'Raleway', Arial, sans-serif;
     transition: 0.5s;
-	border: 1px solid #ffffff;
+	border: 1px solid #999966;
 	letter-spacing: 1px;
 	text-align: center;
 }
 
-.right_btn a:hover{
-	color: #ffffff;
-	background: transparent;
+.bg_col_btn a:hover{
+	color: #111111;
+	background-color: #ffffff;
 	border-color: #ffffff;
 }
 
@@ -1821,6 +1817,7 @@ a.blog_btn:hover{
 	padding: 0 25px;
 	display: flex;
 	flex-wrap: wrap;
+	padding-top: 12em;
 }
 
 .footer_col{
@@ -2145,17 +2142,6 @@ a.footer-logo img{
 		width: 50%;
 	}
 	
-	.title_head{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.right_btn{
-		flex: 100%;
-		width: 100%;
-		margin-top: 20px;
-	}
-	
 	.footer_col{
 		flex: 50%;
 		width: 50%;
@@ -2171,12 +2157,9 @@ a.footer-logo img{
 	.square_box h2,
 	.law_heading,
 	.info_head h2,
-	.review_head h2{
+	.review_head h2,
+	.title_head{
 		font-size: 30px;
-	}
-	
-	.title_head h3{
-		font-size: 25px;
 	}
 	
 	.num_col{
